[package]
name = "json-patch"
version = "0.2.5"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch"
repository = "https://github.com/idubrov/json-patch"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = ["diff"]
nightly = []
diff = ["treediff"]

[dependencies]
serde = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0" }
serde_derive = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0" }
serde_json = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0" }

sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.0" }

[dependencies.treediff]
git = "https://github.com/enigmampc/treediff-rs.git"
rev = "sgx-v3.0.1"
features = ["with-serde-json"]
optional = true

[dev-dependencies]
rand = "0.5.0"

[dev-dependencies.serde_json]
git = "https://github.com/baidu/rust-sgx-sdk.git"
rev = "v1.0.0"
version = "1.0.17"
features = ["preserve_order"]
