[package]
name = "json-patch"
version = "0.2.5"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch"
repository = "https://github.com/idubrov/json-patch"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[features]
default = ["diff"]
nightly = []
diff = ["treediff"]

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "407aaaa2558dda5c2367d57ba40324c52cf9acc2" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "407aaaa2558dda5c2367d57ba40324c52cf9acc2" }

sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }

serde_json = { git = "https://github.com/enigmampc/serde-json-sgx.git", rev = "1.0.39-sgx-1.0.8" }
treediff = { git = "https://github.com/enigmampc/treediff-rs.git", rev = "3.0.1-sgx-1.0.8", features = ["with-serde-json"], optional = true }

[dev-dependencies]
rand = "0.5.0"
